objects/sixsense__X6sense_Company_Score__c.object
<CustomObject>
    <fields>
        <fullName>sixsense__Buying_Stage__c</fullName>
        <label>Buying Stage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__Company_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>sixsense__X6sense_New_Company__c</referenceTo>
        <relationshipLabel>6sense Predictive Intelligence - New Companies</relationshipLabel>
        <relationshipName>X6sense_Company_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sixsense__Intent_Score__c</fullName>
        <label>Intent Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__NewCompanyProductKey__c</fullName>
        <externalId>true</externalId>
        <label>NewCompanyProductKey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sixsense__Product_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>sixsense__X6sense_Product__c</referenceTo>
        <relationshipName>X6sense_Company_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sixsense__Product_Name__c</fullName>
        <description>Plain text name of the product related to this score.</description>
        <label>Product Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__Profile_Fit__c</fullName>
        <label>Profile Fit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>6sense Company Score</label>
    <listViews>
        <fullName>sixsense__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Category</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>6sense Company Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>